# Release Notes:
## Main features:
- Created component named “calendarCard” using Bootstrap
- Added the following attributes the the class “calendarCard.component.ts”:
    -  date
    -  title
    -  description
- Created a list for all cards containing three lines of a date, title, and description
- Added angular routing
- Added layout components
- Created 5 new components and a for loop
- Created a database
- Created a new component to display requested data from database
- Changed parentCard and calendarCard to retrieve data from backend instead of mocklists
- Created a service for parentCard and calendarCard to handle retrieving the data
- Switched to AngularFire Library from HTTPClient for calendarCard and parentCard
- Deployed webapp