@@ -6,6 +6,7 @@ import { ShopLayoutComponent } from './layouts/shop-layout.component';
 import { NewsLayoutComponent } from './layouts/news-layout.component';
 import { HelpLayoutComponent } from './layouts/help-layout.component';
 import { ParentsLayoutComponent } from './layouts/parents-layout.component';
+import { AddCalendarCardComponent } from './cards/calendarCard/add-calendar-card/add-calendar-card.component';
 
 const routes:Routes = [
   {
@@ -22,6 +23,9 @@ const routes:Routes = [
   },
   {
     path: 'Parents', component: ParentsLayoutComponent
+  },
+  {
+    path: 'admin', component: AddCalendarCardComponent
   }
 ];
 
