@@ -27,6 +27,8 @@ import { environment } from '../environments/environment';
 import { provideDatabase,getDatabase } from '@angular/fire/database';
 import { AngularFireModule } from '@angular/fire/compat';
 import { AngularFirestoreModule } from '@angular/fire/compat/firestore';
+import { AddCalendarCardComponent } from './cards/calendarCard/add-calendar-card/add-calendar-card.component';
+import { FormsModule } from '@angular/forms';
 
 @NgModule({
   declarations: [
@@ -47,7 +49,8 @@ import { AngularFirestoreModule } from '@angular/fire/compat/firestore';
     ParentsNavBarComponent,
     ParentCardComponent,
     BottomNavComponent,
-    UserInfoHttpComponent
+    UserInfoHttpComponent,
+    AddCalendarCardComponent
   ],
   imports: [
     BrowserModule,
@@ -55,7 +58,8 @@ import { AngularFirestoreModule } from '@angular/fire/compat/firestore';
     AppRoutingModule,
     HttpClientModule,
     AngularFireModule.initializeApp(environment.firebase),
-    AngularFirestoreModule
+    AngularFirestoreModule,
+    FormsModule
   ],
   providers: [],
   bootstrap: [AppComponent]
